fdo#68648: SvxNumRule: serialize the aFmtsSet flags too

The constructor of SvxNumRule initializes aFmts[i] with a format but
always sets aFmtsSet[i] to false, so SvxNumRule::Store()
and SvxNumRule::SvxNumRule(SvStream &rStream) need to be able
to round-trip that combination to prevent spurious numberings.

It is unlikely that this class is serialized in the table auto-format
files but i haven't checked; this change does not change the size of the
serialization so shouldn't cause trouble anyway.

(regression from a95cce27295f9cd255fa72eaded00972e3efb69b)

Change-Id: I589ea108ac069624aaa7b26cdc3bfe8182b15851